--- a/css/main.css
+++ b/css/main.css
@@ -2391,7 +2391,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .video-right {
-  background: url(../img/video-bg.png) no-repeat center;
+  background: url(../img/c12.jpg) no-repeat center;
   background-size: cover;
   height: 350px;
 }
